--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .sidebar {
-  width: 275px;
+  width: 235px;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -14,6 +14,15 @@ body {
   box-sizing: border-box;
 }
 
-.navbar-brand {
+.userCard {
+  width: 200px;
+}
+
+h4 {
+  text-align: center;
+  color: black;
+}
+
+nav-item {
   margin-left: 20px;
 }
